--- a/Q4/frequency based policy/m5out/config.ini
+++ b/Q4/frequency based policy/m5out/config.ini
@@ -126,7 +126,7 @@ prefetcher=Null
 replacement_policy=system.cpu.dcache.replacement_policy
 response_latency=2
 sequential_access=false
-size=65536
+size=32768
 system=system
 tag_latency=2
 tags=system.cpu.dcache.tags
@@ -155,7 +155,7 @@ p_state_clk_gate_min=1000
 power_model=
 replacement_policy=system.cpu.dcache.replacement_policy
 sequential_access=false
-size=65536
+size=32768
 tag_latency=2
 warmup_percentage=0
 
@@ -460,7 +460,7 @@ prefetcher=Null
 replacement_policy=system.l2.replacement_policy
 response_latency=20
 sequential_access=false
-size=2097152
+size=131072
 system=system
 tag_latency=20
 tags=system.l2.tags
@@ -489,7 +489,7 @@ p_state_clk_gate_min=1000
 power_model=
 replacement_policy=system.l2.replacement_policy
 sequential_access=false
-size=2097152
+size=131072
 tag_latency=20
 warmup_percentage=0
 
@@ -497,7 +497,7 @@ warmup_percentage=0
 type=Cache
 children=replacement_policy tags
 addr_ranges=0:18446744073709551615:0:0:0:0
-assoc=2
+assoc=1
 clk_domain=system.cpu_clk_domain
 clusivity=mostly_incl
 data_latency=32
@@ -516,7 +516,7 @@ prefetcher=Null
 replacement_policy=system.l3.replacement_policy
 response_latency=32
 sequential_access=false
-size=16777216
+size=1048576
 system=system
 tag_latency=32
 tags=system.l3.tags
@@ -528,15 +528,12 @@ cpu_side=system.tol3bus.master[0]
 mem_side=system.membus.slave[1]
 
 [system.l3.replacement_policy]
-type=BRRIPRP
-btp=0
+type=LFURP
 eventq_index=0
-hit_priority=false
-max_RRPV=3
 
 [system.l3.tags]
 type=BaseSetAssoc
-assoc=2
+assoc=1
 block_size=64
 clk_domain=system.cpu_clk_domain
 data_latency=32
@@ -548,7 +545,7 @@ p_state_clk_gate_min=1000
 power_model=
 replacement_policy=system.l3.replacement_policy
 sequential_access=false
-size=16777216
+size=1048576
 tag_latency=32
 warmup_percentage=0
 
